--- a/printer.cfg
+++ b/printer.cfg
@@ -1,47 +1,9 @@
-# This file contains common pin mappings for the BIGTREETECH Manta M8P V2.0
-# To use this config, the firmware should be compiled for the
-# STM32H723 with a "8KiB bootloader" and USB communication.
-
-# This config is currently only correct for V2.0 boards
-# 
-# See docs/Config_Reference.md for a description of parameters.
-
-[include config_backup.cfg]
 [include mainsail.cfg]
-#[include stealthburner_leds.cfg]
+[include stealthchanger/toolchanger-include.cfg]
 
-# Add these to your printer.cfg file
-[rounded_path]
-resolution: 0.2 # the length of a circle approximation segments.
-replace_g0: False # Use at your own risk
-
-[force_move]
-enable_force_move: True
-
-[input_shaper]
-
-# change T0 in the accel_chip to the tool you are currently running the tests on
-[resonance_tester]
-accel_chip: adxl345 T0
-probe_points:
-  175, 175, 20
-
-# I like to make a symlink from the tapchanger repo to tapchanger in the
-# config directory so I include them like this.
-[include macros.cfg]
-[include homing.cfg] # might need to modify, assumes sensorless
-[include tool_detection.cfg]
-[include toolchanger.cfg]
-#[include tool_purge.cfg]
-
-# Include whatever you called the configs for each of your tools.
-[include Toolhead_T0.cfg]
-#[include Toolhead_T1.cfg]
-#[include Toolhead_T2.cfg]
-#[include Toolhead_T3.cfg]
-#[include Toolhead_T4.cfg]
-
-
+# host MCU service is preinstalled and ready to use with:
+[mcu CB1]
+serial: /tmp/klipper_host_mcu
 
 #####################################################################
 #   UUID Setting
@@ -50,24 +12,6 @@ probe_points:
 [mcu]
 canbus_uuid:5918bc072821
 
-[mcu EBBT0]
-canbus_uuid: 8dc210ef81ee
-
-#[mcu EBBT1]
-#canbus_uuid: 28b350ae7d0a
-
-#[mcu EBBT2]
-#canbus_uuid: 3512eecd21df
-
-#[mcu EBBT3]
-#canbus_uuid: 9d839086518e
-
-#[mcu EBBT4]
-#canbus_uuid: 1e0dec8947d9
-
-##	[X in MOTOR1] - B Motor
-##	[Y in MOTOR2] - A Motor
-##	[E in MOTOR8] - Extruder
 
 ##--------------------------------------------------------------------
 
@@ -85,6 +29,8 @@ sensor_type: temperature_mcu
 
 [temperature_sensor SoC]
 sensor_type: temperature_host
+min_temp: 0
+max_temp: 100
 
 #####################################################################
 # 	X/Y Stepper Settings
@@ -333,12 +279,42 @@ hysteresis: 5
 ##	If you are experiencing back flow, you can reduce fan_speed
 #fan_speed: 1.0
 
-[heater_fan controller_fan]
+#[heater_fan controller_fan]
 ##	Controller fan - CNC_FAN2
-pin: PF6
-kick_start_time: 0.5
-heater: heater_bed
-heater_temp: 45.0
+#pin: PF6
+#kick_start_time: 0.5
+#heater: heater_bed
+#heater_temp: 45.0
+
+
+[controller_fan stepper_fan]
+pin: PF7                # Pin for controlling the stepper cooling fan (change to your correct pin)
+max_power: 1.0           # Maximum fan power (full power)
+off_below: 0.10          # The fan will turn off when stepper power drops below 0.10
+idle_timeout: 120        # Time (in seconds) after stepper activity to keep fan running
+stepper: stepper_x, stepper_y  # Link the fan to X and Y stepper motors
+
+[controller_fan stepper_fan2]
+pin: PF9                # Pin for controlling the stepper cooling fan (change to your correct pin)
+max_power: 1.0           # Maximum fan power (full power)
+off_below: 0.10          # The fan will turn off when stepper power drops below 0.10
+idle_timeout: 120        # Time (in seconds) after stepper activity to keep fan running
+stepper: stepper_z, stepper_z1, stepper_z2, stepper_z3  # Link the fan to X and Y stepper motors
+
+[temperature_fan soc_fan]
+pin: PF6                                # Replace with your actual fan control pin
+sensor_type: temperature_host            # The sensor type for SoC temperature
+#sensor: temperature_SoC                  # Reference the correct sensor from the previous section
+control: pid                            # PID control for smooth fan speed adjustment
+max_temp: 100
+min_temp: 40
+min_speed: 0.3
+max_speed: 1.0
+shutdown_speed: 1.0
+pid_Kp: 10.0                             # PID proportional coefficient
+pid_Ki: 0.5                              # PID integral coefficient
+pid_Kd: 0.0                              # PID derivative coefficient
+
 
 #[heater_fan exhaust_fan]
 ##	Exhaust fan - CNC_FAN3
@@ -526,24 +502,86 @@ resolution: 0.1
 # 	Macros
 #####################################################################
 
+[gcode_macro CG28]
+gcode:
+    {% if printer.toolhead.homed_axes != 'xyz' %}
+      STATUS_HOMING
+      G28
+      STATUS_READY
+    {% endif %}
+  
+
+
 [gcode_macro G32]
 gcode:
-    BED_MESH_CLEAR
+    SAVE_GCODE_STATE NAME=STATE_G32
+    G90
     G28
     QUAD_GANTRY_LEVEL
     G28
-   
-    
-    ##	Uncomment for 350mm build
-    G0 X175 Y175 Z30 F3600
-    #--------------------------------------------------------------------
+    RESTORE_GCODE_STATE NAME=STATE_G32
+
+    [gcode_macro PRIME_LINE]
+gcode:
+    SAVE_GCODE_STATE NAME=PRIME_LINE_STATE
+    M117 Priming
+    G90                 ; Absolute coordinates.
+    M83                 ; Relative extruder mode.
+    G92 E0
+    ; Move to start of line.
+    G1 Z10 F900
+    G1 X240 Y5 F18000
+    G1 Z1.0 F900
+    ; Print the line.
+    G91                ; Relative coordinates.
+    G1 X100 E25 F1000  ; Extrude filament 25mm (how much it retracted in PRINT_END).
+    G1 Y+2 F1000
+    G1 X-100 E9 F1000    ; Print second part of the line.
+    G1 E-0.5 F3000      ; Retract to avoid stringing.
+    G1 X0.5 E0 F1000    ; Wipe back to break string.
+    G1 X-5.5 E0 F1000   ; Wipe forward to break string.
+    RESTORE_GCODE_STATE NAME=PRIME_LINE_STATE
    
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
-    G32                            ; home all axes
-    G1 Z20 F3000                   ; move nozzle away from bed
-   
+        {% set TOOL = params.TOOL | default(-1)| int %}
+    {% set TOOL_TEMP = params.TOOL_TEMP | default(0) | int %}
+    {% set BED_TEMP = params.BED_TEMP | default(0) | int %}
+
+    M117 Initializing...
+    INITIALIZE_TOOLCHANGER
+    STOP_TOOL_PROBE_CRASH_DETECTION
+
+    M117 Heating Bed
+    M190 S{BED_TEMP}
+
+    M117 Homing
+    G28
+    T0
+
+    M117 Quad Gantry Level
+    QUAD_GANTRY_LEVEL
+    G28 Z
+
+    
+        {% if TOOL >= 0 %}
+        M104 T0 S0 ; shutdown T0.  If it's up first it will be heated below.
+        T{params.TOOL}
+        {% set initialToolTemp = 'T' ~ params.TOOL|string ~ '_TEMP' %}
+        M117 Waiting on T{params.TOOL} S{params[initialToolTemp]}C
+        M109 S{params[initialToolTemp]}
+    {% else %}
+        M109 S{TOOL_TEMP}
+    {% endif %}
+
+    START_TOOL_PROBE_CRASH_DETECTION
+
+   M117 
+    STATUS_PRINTING
+
+    SET_IDLE_TIMEOUT TIMEOUT=43200 ; 12hours
+
 
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
